--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,16 +15,33 @@ body {
   overflow-x: hidden;
   color: rgb(var(--foreground-rgb));
   height: 100%;
+  font-size: 10px;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
+  font-size: 1.5rem;
+  line-height: 1.4;
+  font-family: 'MazzardH', sans-serif;
+  font-weight: 400;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+
+  &:hover,
+  &:visited {
+    color: inherit;
+  }
+}
+
+button {
+  background-color: transparent;
+  color: inherit;
+  border: none;
+  cursor: pointer;
 }
 
 @media (prefers-color-scheme: dark) {
