--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,10 +1,15 @@
 :root {
-  --background-rgb: 0, 0, 0;
-  --foreground-rgb: 255, 255, 255;
+  --color-foreground: #fff;
+  --color-background: #000;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 * {
-  box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
@@ -13,14 +18,14 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  color: rgb(var(--foreground-rgb));
+  color: var(--color-foreground);
   height: 100%;
   font-size: 10px;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: rgb(var(--background-rgb));
+  color: var(--color-foreground);
+  background: var(--color-background);
   font-size: 1.5rem;
   line-height: 1.4;
   font-family: 'MazzardH', sans-serif;
