--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,9 @@
 :root {
   --color-foreground: #fff;
   --color-background: #000;
+  --padding-top: 3.5rem;
+  --padding-left: 5rem;
+  --padding-right: 5rem;
 }
 
 *,
