--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,7 @@
 :root {
   --color-foreground: #fff;
   --color-background: #000;
+  --color-back: #080809;
   --padding-top: 3.5rem;
   --padding-left: 5rem;
   --padding-right: 5rem;
@@ -28,7 +29,7 @@ body {
 
 body {
   color: var(--color-foreground);
-  background: var(--color-background);
+  background: var(--color-back);
   font-size: 1.5rem;
   line-height: 1.4;
   font-family: 'MazzardH', sans-serif;
