--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -3,19 +3,39 @@
   padding: var(--padding-top) var(--padding-left);
   min-height: 50rem;
 
+  background-image: none;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
   &Main {
     background-image: url('/bg/screen_1_bg.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
   }
 
-  &Hero {
-    /* padding-top: 10rem; */
+  &Factions {
+    background-image: url('/bg/screen_2_bg.jpg');
+    flex-direction: row;
+  }
+
+  &Roadmap {
+    position: relative;
+    background: linear-gradient(180deg, rgba(10,20,24,1) 0%, rgba(53,47,70,1) 100%);
+
+    &::before {
+      z-index: 0;
+      content: "";
+      height: 150px;
+      position: absolute;
+      top: -150px;
+      left: 0;
+      right: 0;
+      background: linear-gradient(180deg, rgba(53,47,70,0) 0%, rgba(10,20,24,1) 100%);
+    }
   }
 }
 
