--- a/components/Title/style.module.scss
+++ b/components/Title/style.module.scss
@@ -1,10 +1,11 @@
 .title {
   font-family: 'TTOctosquares', sans-serif;
   font-weight: 400;
-  line-height: 1.3;
+  line-height: 1;
   letter-spacing: 1.5vw;
   text-align: center;
   text-transform: uppercase;
+  max-width: 86vw;
 
   &Medium {
     font-size: 6.6rem;
