--- a/components/ArtMenu/style.module.scss
+++ b/components/ArtMenu/style.module.scss
@@ -4,21 +4,10 @@
 
   position: relative;
 
-  /* &::after {
-    content: '';
-    position: absolute;
-    right: 16px;
-    top: 46px;
-    width: 4px;
-    bottom: 46px;
-    background: white;
-    z-index: 0;
-  } */
-
   &Item {
     display: grid;
     grid-template-columns: 1fr auto;
-    grid-template-rows: minmax(46px, auto) minmax(28px, 1fr);
+    grid-template-rows: minmax(46px, auto) minmax(60px, 1fr);
     grid-template-areas: 
     "title diamond"
     "card diamond";
@@ -36,6 +25,7 @@
     text-align: right;
     line-height: 1;
     align-self: center;
+    transition: text-transform 0.4s ease-in-out;
   }
 
   &Diamond {
@@ -47,12 +37,14 @@
     position: relative;
     height: 0;
     opacity: 0;
-    transition: all 0.3s;
+    transition: all 0.3s linear;
 
     &Button {
       position: absolute;
       left: -6.2rem;
       top: 2.7rem;
+      opacity:0;
+      transition: opacity 0.4s ease-in .2s;
     }
   
     &Image {
@@ -71,6 +63,10 @@
       height: 18.4rem;
       width: 27.2rem;
       overflow: visible;
+    }
+
+    .artMenuCardButton {
+      opacity: 1;
     }
   }
 }
